--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           </h2>
           <div class="loader">
             <div class="load">
-              <div id="count" class="percentage" style="width: 55%"></div>
+              <div id="count" class="percentage" style="width: 90%"></div>
             </div>
             <div class="info">
               <span>0%</span>
-              <span id="progress">55%</span>
+              <span id="progress">90%</span>
               <span>100%</span>
             </div>
           </div>
@@ -44,6 +44,11 @@
               target="_blank"
               href="https://www.facebook.com/LivrariaLothusOfficial"
               ><i class="fa fa-facebook"></i
+            ></a>
+            <a
+              target="_blank"
+              href="https://www.instagram.com/livrarialothus_official/"
+              ><i class="fa fa-instagram"></i
             ></a>
           </div>
         </div>
